src/objects/Job_Recurrence_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Days_of_Week__c</fullName>
        <label>Days of Week</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description text to copy to shift records created on this schedule.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Number_of_Volunteers__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Desired Number of Volunteers</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_End_Date__c</fullName>
        <label>Schedule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Start_Date_Time__c</fullName>
        <label>Schedule Start Date &amp; Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Volunteer_Job__c</fullName>
        <inlineHelpText>The Job this Recurrence Schedule is for.</inlineHelpText>
        <label>Volunteer Job</label>
        <referenceTo>Volunteer_Job__c</referenceTo>
        <relationshipName>Volunteer_Job_Recurrence_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Weekly_Occurrence__c</fullName>
        <label>Weekly Occurrence</label>
        <picklist>
            <picklistValues>
                <fullName>Every</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Job Recurrence Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllJRS</fullName>
        <columns>NAME</columns>
        <columns>Volunteer_Job__c</columns>
        <columns>Weekly_Occurrence__c</columns>
        <columns>Days_of_Week__c</columns>
        <columns>Schedule_Start_Date_Time__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>JRS-{00000}</displayFormat>
        <label>JRS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Recurrence Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>